Resolves tdf#165085 - Automatic font color on PDF document

Patch 2ca381b31e40d516c5d79ce4e59cecbf9683b616 applies here too

Change-Id: I82948ef4f8d8bc9312cc24692ff3471710543ddc
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/181327
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
Tested-by: Jenkins
(cherry picked from commit 684658df943b9cb8e25e9727af1147d22e396078)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182719
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
(cherry picked from commit 9c9cf0ed8045e4fb638b2c7d7db954dc4f601c01)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183157
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
Tested-by: Xisco Fauli <xiscofauli@libreoffice.org>